Bug 1293770 - Update popstate.dat for maildir delete. r=rkent